name:               hello-wai
version:            1.0
build-type:         Simple
cabal-version:      >= 1.20

executable hello-wai
  main-is:            Main.hs
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
  ghc-options:        -O2 -Wall -threaded
  build-depends:      base,
                      http-types,
                      wai,
                      warp
